Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
     }
    ],
    "source": [
-    "df['Review_Length'] = df.text.map(lambda value: print('Long') if len(text_len.split()) > 50\n",
+    "df['Review_Length'] = df.text.map(rlambda value: print('Long') if len(text_len.split()) > 50\n",
     "                                \n",
     "                                else print('Long' ))"
    ]
