--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "4  TlvV-xJhmh7LCwJYXkV-cg  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "4  TlvV-xJhmh7LCwJYXkV-cg             25  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "Name: date, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "77.06551724137931"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,6 @@
        "      <th>user_id</th>\n",
        "      <th>stars_squared</th>\n",
        "      <th>word_count</th>\n",
-       "      <th>Review_Length</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -470,7 +469,6 @@
        "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "      <td>25</td>\n",
        "      <td>58</td>\n",
-       "      <td>Long</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -486,7 +484,6 @@
        "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "      <td>1</td>\n",
        "      <td>30</td>\n",
-       "      <td>Long</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -502,7 +499,6 @@
        "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "      <td>25</td>\n",
        "      <td>30</td>\n",
-       "      <td>Long</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -518,7 +514,6 @@
        "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "      <td>1</td>\n",
        "      <td>82</td>\n",
-       "      <td>Long</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -534,7 +529,6 @@
        "      <td>TlvV-xJhmh7LCwJYXkV-cg</td>\n",
        "      <td>25</td>\n",
        "      <td>32</td>\n",
-       "      <td>Long</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -562,15 +556,15 @@
        "3  This place sucks. The customer service is horr...       2   \n",
        "4  I have been an Emerald Club member for a numbe...       0   \n",
        "\n",
-       "                  user_id  stars_squared  word_count Review_Length  \n",
-       "0  msQe1u7Z_XuqjGoqhB0J5g             25          58          Long  \n",
-       "1  msQe1u7Z_XuqjGoqhB0J5g              1          30          Long  \n",
-       "2  msQe1u7Z_XuqjGoqhB0J5g             25          30          Long  \n",
-       "3  msQe1u7Z_XuqjGoqhB0J5g              1          82          Long  \n",
-       "4  TlvV-xJhmh7LCwJYXkV-cg             25          32          Long  "
+       "                  user_id  stars_squared  word_count  \n",
+       "0  msQe1u7Z_XuqjGoqhB0J5g             25          58  \n",
+       "1  msQe1u7Z_XuqjGoqhB0J5g              1          30  \n",
+       "2  msQe1u7Z_XuqjGoqhB0J5g             25          30  \n",
+       "3  msQe1u7Z_XuqjGoqhB0J5g              1          82  \n",
+       "4  TlvV-xJhmh7LCwJYXkV-cg             25          32  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,21 +599,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-d3ab4eb374e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: print('Long') if len(text_len.split()) > 50\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                 else print('Long' ))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: print('Long') if len(text_len.split()) > 50\n",
     "                                \n",
