Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -603,9 +603,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: print('') \n",
+    "df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: print('Short') \n",
     "                                  if len(text_len.split()) < 50\n",
-    "                                \n",
     "                                else print('Long' ))"
    ]
   },
