Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -605,6 +605,7 @@
    "source": [
     "df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: print('Short') \n",
     "                                  if len(text_len.split()) < 50\n",
+    "                                  elif len(text_len.split())\n",
     "                                else print('Long' ))"
    ]
   },
