--- a/index.ipynb
+++ b/index.ipynb
@@ -605,8 +605,8 @@
    "source": [
     "df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: print('Short') \n",
     "                                  if len(text_len.split()) < 50\n",
-    "                                  elif len(text_len.split())\n",
-    "                                else print('Long' ))"
+    "                                  elif len(text_len.split())<80\n",
+    "                            else print('Long' ))"
    ]
   },
   {
