Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,7 @@
     }
    ],
    "source": [
-    "df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: print('Short') \n",
+    "df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: 'Short'\n",
     "                                  if len(text_len.split()) < 50\n",
     "                                  elif len(text_len.split())<80\n",
     "                                  else print('Long' ))"
