--- a/index.ipynb
+++ b/index.ipynb
@@ -613,7 +613,7 @@
    ],
    "source": [
     "df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: 'Short'if len(text_len.split()) < 50\n",
-    "                                  else(lif len(text_len.split())<80\n",
+    "                                  else(if len(text_len.split())<80\n",
     "                                  else print('Long' ))"
    ]
   },
