Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,9 +612,7 @@
     }
    ],
    "source": [
-    "df['Review_Length'] = df.text.map(rewrite_as_lambda, lambda value: 'Short'if len(text_len.split()) < 50\n",
-    "                                  else(if len(text_len.split())<80\n",
-    "                                  else print('Long' ))"
+    "df['Review_Length'] = df."
    ]
   },
   {
