Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,7 @@
     }
    ],
    "source": [
-    "df['review_length'] = df['word_count'].map(lab)"
+    "df['review_length'] = df['word_count'].map(lambda x)"
    ]
   },
   {
