--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,7 @@
     }
    ],
    "source": [
-    "df['review_length'] = df['word_count'].map(lambda x)"
+    "df['review_length'] = df['word_count'].map(lambda x: 'short' if)"
    ]
   },
   {
