Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,7 @@
     }
    ],
    "source": [
-    "df['review_length'] = df['word_count'].map(lambda x: 'short' if)"
+    "df['review_length'] = df['word_count'].map(lambda x: 'short' if x<50 else('medium'))"
    ]
   },
   {
