Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -811,23 +811,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-7261d5140942>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-7261d5140942>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    df.date.map(lambda x: %d/%m/%y)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Your code here\n",
-    "\n",
-    "\n",
-    "df.date.map(lambda x: %d/%m/%y)"
+    "#Your code here\n"
    ]
   },
   {
