--- a/index.ipynb
+++ b/index.ipynb
@@ -841,7 +841,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.date = df.date.map(lambda x: '{}-{}-{}'.format)"
+    "df.date = df.date.map(lambda x: '{}-{}-{}'.format(x[]))"
    ]
   },
   {
