--- a/index.ipynb
+++ b/index.ipynb
@@ -841,7 +841,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.date = df.date.map(lambda x: '{}-{}-{}'.format(x[-2:],))"
+    "df.date = df.date.map(lambda x: '{}-{}-{}'.format(x[-2:],x[5:7]))"
    ]
   },
   {
