Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -837,11 +837,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.date = df.date.map(lambda x: '{}-{}-{}'.format(x[-2:],x[5:7],x[:4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.date.head()"
    ]
   },
   {
